listings/ch04-understanding-ownership/no-listing-12-immutable-and-mutable-not-allowed/output.txt
$ cargo run
   Compiling system_wlasnosci v0.1.0 (file:///projects/system_wlasnosci)
error[E0502]: cannot borrow `s` as mutable because it is also borrowed as immutable
 --> src/main.rs:6:14
  |
4 |     let r1 = &s; // no problem
  |              -- immutable borrow occurs here
5 |     let r2 = &s; // no problem
6 |     let r3 = &mut s; // DUŻY PROBLEM
  |              ^^^^^^ mutable borrow occurs here
7 | 
8 |     println!("{}, {}, i {}", r1, r2, r3);
  |                                -- immutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
error: could not compile `system_wlasnosci`

To learn more, run the command again with --verbose.
